add_subdirectory(test/CompactListList)
add_subdirectory(test/decomposedBlockData)
add_subdirectory(test/mesh)
add_subdirectory(test/primitivePatch)
add_subdirectory(test/tmpField)
add_subdirectory(test/cyclic)
add_subdirectory(test/FixedList)
add_subdirectory(test/POSIX)
add_subdirectory(test/GAMGAgglomeration)
add_subdirectory(test/UDictionary)
add_subdirectory(test/thermoMixture)
add_subdirectory(test/PatchEdgeFaceWave)
add_subdirectory(test/extendedStencil)
add_subdirectory(test/parallel)
add_subdirectory(test/polygonTriangulate)
add_subdirectory(test/cubicEqn)
add_subdirectory(test/IOField)
add_subdirectory(test/tetTetOverlap)
add_subdirectory(test/wordRe)
add_subdirectory(test/momentOfInertia)
add_subdirectory(test/alloc)
add_subdirectory(test/PackedList1)
add_subdirectory(test/OStringStream)
add_subdirectory(test/UniformField)
add_subdirectory(test/tensor2D)
add_subdirectory(test/patchToPatch)
add_subdirectory(test/sort)
add_subdirectory(test/simpleMatrix)
add_subdirectory(test/CompactIOList)
add_subdirectory(test/delete)
add_subdirectory(test/IndirectList)
add_subdirectory(test/PointEdgeWave)
add_subdirectory(test/ISLList)
add_subdirectory(test/HashSet)
add_subdirectory(test/pointField)
add_subdirectory(test/PatchTools)
add_subdirectory(test/SLList)
add_subdirectory(test/rigidBodyDynamics)
add_subdirectory(test/stringList)
add_subdirectory(test/speed/vectorSpeed)
add_subdirectory(test/speed/scalarSpeed)
add_subdirectory(test/nullObject)
add_subdirectory(test/fieldMapping)
add_subdirectory(test/DynamicList)
add_subdirectory(test/NamedEnum)
add_subdirectory(test/pTraits)
add_subdirectory(test/passiveParticle)
add_subdirectory(test/Circulator)
add_subdirectory(test/io)
add_subdirectory(test/globalMeshData)
add_subdirectory(test/labelRanges)
add_subdirectory(test/distribution)
add_subdirectory(test/nonUniformTable)
add_subdirectory(test/liquid)
add_subdirectory(test/IStringStream)
add_subdirectory(test/ListHashTable)
add_subdirectory(test/foamVersion)
add_subdirectory(test/boundSphere)
add_subdirectory(test/reconstruct)
add_subdirectory(test/fileNameClean)
add_subdirectory(test/mappedPatch)
add_subdirectory(test/triTet)
add_subdirectory(test/HashPtrTable)
add_subdirectory(test/mvBak)
add_subdirectory(test/sphericalTensorField)
add_subdirectory(test/PtrListDictionary)
add_subdirectory(test/regex)
add_subdirectory(test/Hashing)
add_subdirectory(test/patchRegion)
add_subdirectory(test/PackedList)
add_subdirectory(test/DLList)
add_subdirectory(test/hexRef8)
add_subdirectory(test/dynamicIndexedOctree)
add_subdirectory(test/PtrList)
add_subdirectory(test/Map)
add_subdirectory(test/BinSum)
add_subdirectory(test/ODE)
add_subdirectory(test/syncTools)
add_subdirectory(test/incGamma)
add_subdirectory(test/volField)
add_subdirectory(test/findSphereFeatureEdges-octree)
add_subdirectory(test/Dictionary)
add_subdirectory(test/dimensionedType)
add_subdirectory(test/UIndirectList)
add_subdirectory(test/List)
add_subdirectory(test/spline)
add_subdirectory(test/sha1)
add_subdirectory(test/PackedList3)
add_subdirectory(test/mkdir)
add_subdirectory(test/PackedList4)
add_subdirectory(test/parallel-communicators)
add_subdirectory(test/Function1)
add_subdirectory(test/codeStream)
add_subdirectory(test/HashTable)
add_subdirectory(test/findTimes)
add_subdirectory(test/quaternion)
add_subdirectory(test/Tuple2)
add_subdirectory(test/fileName)
add_subdirectory(test/string)
add_subdirectory(test/tensor)
add_subdirectory(test/callback)
add_subdirectory(test/memInfo)
add_subdirectory(test/wallDist)
add_subdirectory(test/fvMeshStitcher)
add_subdirectory(test/fvSolutionCombine)
add_subdirectory(test/volPointInterpolation)
add_subdirectory(test/error)
add_subdirectory(test/vector)
add_subdirectory(test/Polynomial)
add_subdirectory(test/HashTable2)
add_subdirectory(test/dictionaryCamel)
add_subdirectory(test/Matrix)
add_subdirectory(test/parallel-nonBlocking)
add_subdirectory(test/DynamicField)
add_subdirectory(test/HashTable3)
add_subdirectory(test/sizeof)
add_subdirectory(test/tokenise)
add_subdirectory(test/integerPow)
add_subdirectory(test/globalIndex)
add_subdirectory(test/fvc)
add_subdirectory(test/slicedField)
add_subdirectory(test/ListOps)
add_subdirectory(test/symmTensorField)
add_subdirectory(test/findCell-octree)
add_subdirectory(test/prefixOSstream)
add_subdirectory(test/fieldDependency)
add_subdirectory(test/router)
add_subdirectory(legacy/electromagnetics/electrostaticFoam)
add_subdirectory(legacy/electromagnetics/magneticFoam)
add_subdirectory(legacy/electromagnetics/mhdFoam)
add_subdirectory(legacy/basic/laplacianFoam)
add_subdirectory(legacy/basic/financialFoam)
add_subdirectory(legacy/incompressible/adjointShapeOptimisationFoam)
add_subdirectory(legacy/incompressible/porousSimpleFoam)
add_subdirectory(legacy/incompressible/dnsFoam)
add_subdirectory(legacy/incompressible/shallowWaterFoam)
add_subdirectory(legacy/incompressible/icoFoam)
add_subdirectory(legacy/lagrangian/mdEquilibrationFoam)
add_subdirectory(legacy/lagrangian/mdFoam)
add_subdirectory(legacy/lagrangian/dsmcFoam)
add_subdirectory(legacy/combustion/PDRFoam)
add_subdirectory(legacy/compressible/rhoPorousSimpleFoam)
add_subdirectory(solvers/foamRun)
add_subdirectory(solvers/chemFoam)
add_subdirectory(solvers/foamMultiRun)
add_subdirectory(solvers/potentialFoam)
add_subdirectory(solvers/boundaryFoam)
add_subdirectory(utilities/mesh/advanced/selectCells)
add_subdirectory(utilities/mesh/advanced/combinePatchFaces)
add_subdirectory(utilities/mesh/advanced/splitCells)
add_subdirectory(utilities/mesh/advanced/modifyMesh)
add_subdirectory(utilities/mesh/advanced/collapseEdges)
add_subdirectory(utilities/mesh/advanced/refineWallLayer)
add_subdirectory(utilities/mesh/advanced/PDRMesh)
add_subdirectory(utilities/mesh/advanced/removeFaces)
add_subdirectory(utilities/mesh/advanced/refinementLevel)
add_subdirectory(utilities/mesh/advanced/autoRefineMesh)
add_subdirectory(utilities/mesh/advanced/refineHexMesh)
add_subdirectory(utilities/mesh/manipulation/createNonConformalCouples)
add_subdirectory(utilities/mesh/manipulation/rotateMesh)
add_subdirectory(utilities/mesh/manipulation/mergeMeshes)
add_subdirectory(utilities/mesh/manipulation/refineMesh)
add_subdirectory(utilities/mesh/manipulation/splitBaffles)
add_subdirectory(utilities/mesh/manipulation/insideCells)
add_subdirectory(utilities/mesh/manipulation/checkMesh)
add_subdirectory(utilities/mesh/manipulation/transformPoints)
add_subdirectory(utilities/mesh/manipulation/renumberMesh)
add_subdirectory(utilities/mesh/manipulation/polyDualMesh)
add_subdirectory(utilities/mesh/manipulation/topoSet)
add_subdirectory(utilities/mesh/manipulation/mergeBaffles)
add_subdirectory(utilities/mesh/manipulation/flattenMesh)
add_subdirectory(utilities/mesh/manipulation/deformedGeom)
add_subdirectory(utilities/mesh/manipulation/singleCellMesh)
add_subdirectory(utilities/mesh/manipulation/splitMeshRegions)
add_subdirectory(utilities/mesh/manipulation/stitchMesh)
add_subdirectory(utilities/mesh/manipulation/subsetMesh)
add_subdirectory(utilities/mesh/manipulation/createBaffles)
add_subdirectory(utilities/mesh/manipulation/splitMesh)
add_subdirectory(utilities/mesh/manipulation/objToVTK)
add_subdirectory(utilities/mesh/manipulation/zipUpMesh)
add_subdirectory(utilities/mesh/manipulation/autoPatch)
add_subdirectory(utilities/mesh/manipulation/mirrorMesh)
add_subdirectory(utilities/mesh/manipulation/setsToZones)
add_subdirectory(utilities/mesh/manipulation/attachMesh)
add_subdirectory(utilities/mesh/manipulation/createPatch)
add_subdirectory(utilities/mesh/manipulation/orientFaceZone)
add_subdirectory(utilities/mesh/conversion/gmshToFoam)
add_subdirectory(utilities/mesh/conversion/foamMeshToFluent)
add_subdirectory(utilities/mesh/conversion/plot3dToFoam)
add_subdirectory(utilities/mesh/conversion/cfx4ToFoam)
add_subdirectory(utilities/mesh/conversion/foamToSurface)
add_subdirectory(utilities/mesh/conversion/vtkUnstructuredToFoam)
add_subdirectory(utilities/mesh/conversion/ansysToFoam)
add_subdirectory(utilities/mesh/conversion/ideasUnvToFoam)
add_subdirectory(utilities/mesh/conversion/Optional/ccm26ToFoam)
add_subdirectory(utilities/mesh/conversion/star3ToFoam)
add_subdirectory(utilities/mesh/conversion/netgenNeutralToFoam)
add_subdirectory(utilities/mesh/conversion/gambitToFoam)
add_subdirectory(utilities/mesh/conversion/fluent3DMeshToFoam)
add_subdirectory(utilities/mesh/conversion/fluentMeshToFoam)
add_subdirectory(utilities/mesh/conversion/datToFoam)
add_subdirectory(utilities/mesh/conversion/kivaToFoam)
add_subdirectory(utilities/mesh/conversion/foamToStarMesh)
add_subdirectory(utilities/mesh/conversion/sammToFoam)
add_subdirectory(utilities/mesh/conversion/tetgenToFoam)
add_subdirectory(utilities/mesh/conversion/writeMeshObj)
add_subdirectory(utilities/mesh/conversion/star4ToFoam)
add_subdirectory(utilities/mesh/conversion/mshToFoam)
add_subdirectory(utilities/mesh/generation/zeroDimensionalMesh)
add_subdirectory(utilities/mesh/generation/extrude2DMesh)
add_subdirectory(utilities/mesh/generation/extrude2DMesh/extrude2DMesh)
add_subdirectory(utilities/mesh/generation/extrudeMesh)
add_subdirectory(utilities/mesh/generation/snappyHexMesh)
add_subdirectory(utilities/mesh/generation/extrudeToRegionMesh)
add_subdirectory(utilities/mesh/generation/blockMesh)
add_subdirectory(utilities/thermophysical/adiabaticFlameT)
add_subdirectory(utilities/thermophysical/equilibriumCO)
add_subdirectory(utilities/thermophysical/equilibriumFlameT)
add_subdirectory(utilities/thermophysical/chemkinToFoam)
add_subdirectory(utilities/thermophysical/mixtureAdiabaticFlameT)
add_subdirectory(utilities/parallelProcessing/redistributePar)
add_subdirectory(utilities/parallelProcessing/reconstructPar)
add_subdirectory(utilities/parallelProcessing/decomposePar)
add_subdirectory(utilities/surface/surfaceBooleanFeatures)
add_subdirectory(utilities/surface/surfaceRedistributePar)
add_subdirectory(utilities/surface/surfaceMeshTriangulate)
add_subdirectory(utilities/surface/surfaceAdd)
add_subdirectory(utilities/surface/surfaceFeatures)
add_subdirectory(utilities/surface/surfaceCheck)
add_subdirectory(utilities/surface/surfaceOrient)
add_subdirectory(utilities/surface/surfaceTransformPoints)
add_subdirectory(utilities/surface/surfaceClean)
add_subdirectory(utilities/surface/surfaceSubset)
add_subdirectory(utilities/surface/surfaceSplitByPatch)
add_subdirectory(utilities/surface/surfaceMeshImport)
add_subdirectory(utilities/surface/surfaceSplitByTopology)
add_subdirectory(utilities/surface/surfaceMeshExport)
add_subdirectory(utilities/surface/surfaceRefineRedGreen)
add_subdirectory(utilities/surface/surfaceMeshConvert)
add_subdirectory(utilities/surface/surfaceMeshInfo)
add_subdirectory(utilities/surface/surfaceHookUp)
add_subdirectory(utilities/surface/surfaceFind)
add_subdirectory(utilities/surface/surfaceLambdaMuSmooth)
add_subdirectory(utilities/surface/surfaceAutoPatch)
add_subdirectory(utilities/surface/surfaceToPatch)
add_subdirectory(utilities/surface/surfacePointMerge)
add_subdirectory(utilities/surface/surfaceFeatureConvert)
add_subdirectory(utilities/surface/surfaceConvert)
add_subdirectory(utilities/surface/surfaceCoarsen)
add_subdirectory(utilities/surface/surfaceSplitNonManifolds)
add_subdirectory(utilities/surface/surfaceInertia)
add_subdirectory(utilities/miscellaneous/patchSummary)
add_subdirectory(utilities/miscellaneous/foamListTimes)
add_subdirectory(utilities/miscellaneous/foamDictionary)
add_subdirectory(utilities/miscellaneous/foamToC)
add_subdirectory(utilities/miscellaneous/foamFormatConvert)
add_subdirectory(utilities/postProcessing/foamPostProcess)
add_subdirectory(utilities/postProcessing/miscellaneous/engineCompRatio)
add_subdirectory(utilities/postProcessing/miscellaneous/temporalInterpolate)
add_subdirectory(utilities/postProcessing/miscellaneous/pdfPlot)
add_subdirectory(utilities/postProcessing/lagrangian/steadyParticleTracks)
add_subdirectory(utilities/postProcessing/lagrangian/particleTracks)
add_subdirectory(utilities/postProcessing/dataConversion/smapToFoam)
add_subdirectory(utilities/postProcessing/dataConversion/foamToGMV)
add_subdirectory(utilities/postProcessing/dataConversion/foamDataToFluent)
add_subdirectory(utilities/postProcessing/dataConversion/foamToVTK)
add_subdirectory(utilities/postProcessing/dataConversion/foamToVTK/foamToVTK)
add_subdirectory(utilities/postProcessing/dataConversion/foamToEnsight)
add_subdirectory(utilities/postProcessing/dataConversion/foamToEnsightParts)
add_subdirectory(utilities/postProcessing/dataConversion/foamToTecplot360)
add_subdirectory(utilities/postProcessing/dataConversion/foamToTetDualMesh)
add_subdirectory(utilities/postProcessing/noise)
add_subdirectory(utilities/postProcessing/graphics/PVReaders)
add_subdirectory(utilities/postProcessing/graphics/PVReaders/PVFoamReader)
add_subdirectory(utilities/postProcessing/graphics/PVReaders/PVFoamReader/vtk)
add_subdirectory(utilities/postProcessing/graphics/PVReaders/vtkPVFoam)
add_subdirectory(utilities/postProcessing/graphics/PVReaders/vtkPVblockMesh)
add_subdirectory(utilities/postProcessing/graphics/PVReaders/PVblockMeshReader)
add_subdirectory(utilities/postProcessing/graphics/PVReaders/PVblockMeshReader/vtk)
add_subdirectory(utilities/postProcessing/graphics/ensightFoamReader)
add_subdirectory(utilities/preProcessing/createExternalCoupledPatchGeometry)
add_subdirectory(utilities/preProcessing/mapFields)
add_subdirectory(utilities/preProcessing/engineSwirl)
add_subdirectory(utilities/preProcessing/dsmcInitialise)
add_subdirectory(utilities/preProcessing/setFields)
add_subdirectory(utilities/preProcessing/setWaves)
add_subdirectory(utilities/preProcessing/foamSetupCHT)
add_subdirectory(utilities/preProcessing/boxTurb)
add_subdirectory(utilities/preProcessing/viewFactorsGen)
add_subdirectory(utilities/preProcessing/setAtmBoundaryLayer)
add_subdirectory(utilities/preProcessing/changeDictionary)
add_subdirectory(utilities/preProcessing/mdInitialise)
add_subdirectory(utilities/preProcessing/applyBoundaryLayer)
add_subdirectory(utilities/preProcessing/faceAgglomerate)
add_subdirectory(utilities/preProcessing/mapFieldsPar)
add_subdirectory(modules/incompressibleDenseParticleFluid)
add_subdirectory(modules/multicomponentFluid)
add_subdirectory(modules/film)
add_subdirectory(modules/film/filmThermophysicalTransportModels)
add_subdirectory(modules/solidDisplacement)
add_subdirectory(modules/solidDisplacement/solidDisplacementThermo)
add_subdirectory(modules/movingMesh)
add_subdirectory(modules/isothermalFilm)
add_subdirectory(modules/isothermalFilm/fvModels/filmVoFTransfer)
add_subdirectory(modules/isothermalFilm/fvModels/filmCloudTransfer)
add_subdirectory(modules/isothermalFilm/filmCompressibleMomentumTransportModels)
add_subdirectory(modules/compressibleMultiphaseVoF)
add_subdirectory(modules/incompressibleMultiphaseVoF)
add_subdirectory(modules/solid)
add_subdirectory(modules/multiphaseVoFSolver)
add_subdirectory(modules/fluid)
add_subdirectory(modules/twoPhaseVoFSolver)
add_subdirectory(modules/incompressibleDriftFlux)
add_subdirectory(modules/incompressibleDriftFlux/relativeVelocityModels)
add_subdirectory(modules/incompressibleDriftFlux/mixtureViscosityModels)
add_subdirectory(modules/multiphaseEuler/multiphaseCompressibleMomentumTransportModels)
add_subdirectory(modules/multiphaseEuler/fvModels)
add_subdirectory(modules/multiphaseEuler/multiphaseThermophysicalTransportModels)
add_subdirectory(modules/multiphaseEuler/functionObjects)
add_subdirectory(modules/multiphaseEuler/interfacialCompositionModels)
add_subdirectory(modules/multiphaseEuler/multiphaseEuler)
add_subdirectory(modules/multiphaseEuler/multiphaseEuler/multiphaseSystems)
add_subdirectory(modules/multiphaseEuler/interfacialModels)
add_subdirectory(modules/multiphaseEuler/multiphaseReactions)
add_subdirectory(modules/multiphaseEuler/phaseSystems)
add_subdirectory(modules/incompressibleVoF)
add_subdirectory(modules/incompressibleVoF/fvModels/VoFCavitation)
add_subdirectory(modules/incompressibleVoF/fvModels/VoFTurbulenceDamping)
add_subdirectory(modules/XiFluid)
add_subdirectory(modules/shockFluid)
add_subdirectory(modules/twoPhaseSolver)
add_subdirectory(modules/functions)
add_subdirectory(modules/fluidSolver)
add_subdirectory(modules/VoFSolver)
add_subdirectory(modules/incompressibleFluid)
add_subdirectory(modules/isothermalFluid)
add_subdirectory(modules/compressibleVoF)
add_subdirectory(modules/compressibleVoF/fvModels/VoFSolidificationMeltingSource)
add_subdirectory(modules/compressibleVoF/fvModels/VoFClouds)
add_subdirectory(modules/compressibleVoF/fvModels/VoFCavitation)
add_subdirectory(modules/compressibleVoF/fvModels/VoFTurbulenceDamping)
