set(_FILES
  derivedFvPatchFields/atmBoundaryLayer/atmBoundaryLayer.C
  derivedFvPatchFields/atmBoundaryLayerInletVelocity/atmBoundaryLayerInletVelocityFvPatchVectorField.C
  derivedFvPatchFields/atmBoundaryLayerInletK/atmBoundaryLayerInletKFvPatchScalarField.C
  derivedFvPatchFields/atmBoundaryLayerInletEpsilon/atmBoundaryLayerInletEpsilonFvPatchScalarField.C
  derivedFvPatchFields/nutkAtmRoughWallFunction/nutkAtmRoughWallFunctionFvPatchScalarField.C
  atmosphericTurbulentTransportModels.C
  porosityModels/powerLawLopesdaCosta/powerLawLopesdaCosta.C
)
add_library(atmosphericModels ${_FILES})
target_compile_features(atmosphericModels PUBLIC cxx_std_11)
target_include_directories(atmosphericModels PUBLIC /Users/hsor001/Projects/opensource/openfoam/src/atmosphericModels/include PRIVATE /Users/hsor001/Projects/opensource/openfoam/src/atmosphericModels/includePrivate)
